--- a/eox_notices/templates/eox_notices/eoxnotice.html
+++ b/eox_notices/templates/eox_notices/eoxnotice.html
@@ -102,7 +102,11 @@
                 <tr>
                     <td>Notice URL</td>
                     <td>
-                        {{ object.notice_url|placeholder }}
+                    {% if object.notice_url %}
+                        <a href="{{ object.notice_url }}">{{ object.notice_url }}</a>
+                    {% else %}
+                        &mdash;
+                    {% endif %}
                     </td>
                 </tr>
             </table>
