--- a/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/eox_notice_delete.html
+++ b/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/eox_notice_delete.html
@@ -12,7 +12,7 @@
                     <p>Are you sure you want to delete EoX Notice <strong>{{ object }}</strong>?</p>
                     <div class="text-right">
                         <button type="submit" name="_confirm" class="btn btn-{{ button_class|default:"danger" }}">Confirm</button>
-                        <a href="{% url 'plugins:eox_notices:eoxnotice' pk=notice.pk %}" class="btn btn-default">Cancel</a>
+                        <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:devicelifecycle' pk=notice.pk %}" class="btn btn-default">Cancel</a>
                     </div>
                 </div>
             </div>
