--- a/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/inc/general_notice.html
+++ b/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/inc/general_notice.html
@@ -1,5 +1,5 @@
 {% load helpers %}
-{% if perms.nautobot_plugin_device_lifecycle_mgmt.view_devicelifecycle and notice %}
+{% if perms.nautobot_plugin_device_lifecycle_mgmt.view_eoxnotice and notice %}
 <div class="row">
     <div class="col-md-12">
         {% if notice.expired %}
@@ -14,7 +14,7 @@
                 <tr>
                     <td>Name</td>
                     <td>
-                        <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:devicelifecycle' pk=notice.id %}">{{ notice }}</a>
+                        <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:eoxnotice' pk=notice.id %}">{{ notice }}</a>
                     </td>
                 </tr>
                 <tr>
