--- a/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/hardwarelcm.html
+++ b/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/hardwarelcm.html
@@ -7,65 +7,53 @@
 
 {% block header %}
     <div class="row noprint">
-        <div class="col-sm-8 col-md-9">
+        <div class="col-sm-12 col-md-12">
             <ol class="breadcrumb">
-                <li><a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:eoxnotice_list' %}">Eox Notice</a></li>
+                <li><a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:hardwarelcm_list' %}">Hardware LifeCycle Notice</a></li>
                 <li><a>{{ object }}</a></li>
             </ol>
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <form action="{% url 'circuits:circuit_list' %}" method="get">
-                <div class="input-group">
-                    <input type="text" name="q" class="form-control" />
-                    <span class="input-group-btn">
-                        <button type="submit" class="btn btn-primary">
-                            <span class="mdi mdi-magnify" aria-hidden="true"></span> Search
-                        </button>
-                    </span>
-                </div>
-            </form>
         </div>
     </div>
     <div class="pull-right noprint">
         {% if perms.nautobot_plugin_device_lifecycle_mgmt.edit_notice %}
-            <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:eoxnotice_edit' pk=object.id %}" class="btn btn-warning">
+            <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:hardwarelcm_edit' pk=object.id %}" class="btn btn-warning">
                 <span class="mdi mdi-pencil" aria-hidden="true"></span> Edit
             </a>
         {% endif %}
         {% if perms.nautobot_plugin_device_lifecycle_mgmt.delete_notice %}
-            <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:eoxnotice_delete' pk=object.id %}" class="btn btn-danger">
+            <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:hardwarelcm_delete' pk=object.id %}" class="btn btn-danger">
                 <span class="mdi mdi-trash-can-outline" aria-hidden="true"></span> Delete
             </a>
         {% endif %}
     </div>
-    <h2>EoX Notice: {{ object }}</h2>
+    <h2>Hardware Notice: {{ object }}</h2>
         {% include 'inc/created_updated.html' with obj=object %}
     <div class="pull-right noprint">
         {% custom_links object %}
     </div>
     <ul class="nav nav-tabs">
         <li role="presentation"{% if not active_tab %} class="active"{% endif %}>
-            <a href="{{ object.get_absolute_url }}">EoX Notice</a>
+            <a href="{{ object.get_absolute_url }}">Hardware Notice</a>
         </li>
         <li role="presentation"{% if active_tab == 'changelog' %} class="active"{% endif %}>
-            <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:eoxnotice_changelog' pk=object.id %}">Change Log</a>
+            <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:hardwarelcm_changelog' pk=object.id %}">Change Log</a>
         </li>
     </ul>
 {% endblock %}
 
 {% block content %}
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <strong>EoX Notice</strong>
+                <strong>Hardware Notice</strong>
             </div>
             <table class="table table-hover panel-body attr-table">
                 <tr>
                     <td>Devices</td>
                     <td>
-                        {% if object.devices.exists %}
-                            {% for device in object.devices.all %}
+                        {% if devices.exists %}
+                            {% for device in devices.all %}
                                 <a href="{% url 'dcim:device' pk=device.pk %}">{{ device }}</a>{% if not forloop.last %}, {% endif %}
                             {% endfor %}
                         {% else %}
@@ -85,29 +73,35 @@
                 </tr>
                 <tr>
                     <td>End of Sale</td>
-                    <td>{{ object.end_of_sale }}</td>
+                    <td>{% if object.end_of_sale %} {{ object.end_of_sale }} {% else %} &mdash; {% endif %}</td>
                 </tr>
                 <tr>
                     <td>End of Support</td>
-                    <td>{{ object.end_of_support }}</td>
+                    <td>{% if object.end_of_support %} {{ object.end_of_support }} {% else %} &mdash; {% endif %}</td>
                 </tr>
                 <tr>
                     <td>End of Software Releases</td>
-                    <td>{{ object.end_of_sw_releases }}</td>
+                    <td>{% if object.end_of_sw_releases %} {{ object.end_of_sw_releases }} {% else %} &mdash; {% endif %}</td>
                 </tr>
                 <tr>
                     <td>End of Security Patches</td>
-                    <td>{{ object.end_of_security_patches }}</td>
+                    <td>
+                        {% if object.end_of_security_patches %} {{ object.end_of_security_patches }} {% else %} &mdash; {% endif %}
+                    </td>
                 </tr>
                 <tr>
-                    <td>Notice URL</td>
+                    <td>Documentation URL</td>
                     <td>
-                    {% if object.notice_url %}
-                        <a href="{{ object.notice_url }}">{{ object.notice_url }}</a>
+                    {% if object.documentation_url %}
+                        <a href="{{ object.documentation_url }}" target="_blank">{{ object.documentation_url }}</a>
                     {% else %}
                         &mdash;
                     {% endif %}
                     </td>
+                </tr>
+                <tr>
+                    <td>Comments</td>
+                    <td><pre>{{ object.comments }}</pre></td>
                 </tr>
             </table>
         </div>
