--- a/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/hardwarelcm_delete.html
+++ b/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/hardwarelcm_delete.html
@@ -7,12 +7,12 @@
         <form action="" method="post" class="form">
             {% csrf_token %}
             <div class="panel panel-{{ panel_class|default:"danger" }}">
-                <div class="panel-heading">Delete EoX Notice?</div>
+                <div class="panel-heading">Delete Hardware Notice?</div>
                 <div class="panel-body">
-                    <p>Are you sure you want to delete EoX Notice <strong>{{ object }}</strong>?</p>
+                    <p>Are you sure you want to delete Hardware Notice <strong>{{ object }}</strong>?</p>
                     <div class="text-right">
                         <button type="submit" name="_confirm" class="btn btn-{{ button_class|default:"danger" }}">Confirm</button>
-                        <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:eoxnotice' pk=notice.pk %}" class="btn btn-default">Cancel</a>
+                        <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:hardwarelcm' pk=notice.pk %}" class="btn btn-default">Cancel</a>
                     </div>
                 </div>
             </div>
