--- a/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/inc/general_notice.html
+++ b/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/inc/general_notice.html
@@ -1,14 +1,11 @@
 {% load helpers %}
-{% if perms.nautobot_plugin_device_lifecycle_mgmt.view_hardwarelcm and notice %}
+{% if perms.nautobot_plugin_device_lifecycle_mgmt.view_hardwarelcm and notices %}
+{% for notice in notices %}
 <div class="row">
     <div class="col-md-12">
-        {% if notice.expired %}
-        <div class="panel panel-danger">
-        {% else %}
-        <div class="panel panel-default">
-        {% endif %}
+        <div class="panel {% if notice.expired %}panel-danger{% else %}panel-warning{% endif %}">
             <div class="panel-heading">
-                <strong>Hardware Notice</strong>
+                <strong>Hardware {% if notice.inventory_item %}Inventory Item {% endif %}Notice</strong>
             </div>
             <table class="table table-hover panel-body attr-table">
                 <tr>
@@ -57,5 +54,5 @@
         </div>
     </div>
 </div>
-
+{% endfor %}
 {% endif %}
