--- a/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/inc/general_notice.html
+++ b/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/inc/general_notice.html
@@ -5,7 +5,7 @@
     <div class="col-md-12">
         <div class="panel {% if notice.expired %}panel-danger{% else %}panel-warning{% endif %}">
             <div class="panel-heading">
-                <strong>Hardware {% if notice.inventory_item %}Inventory Item {% endif %}Notice</strong>
+                <strong>Hardware {% if notice.inventory_item %}Inventory Part {% endif %}Notice</strong>
             </div>
             <table class="table table-hover panel-body attr-table">
                 <tr>
