--- a/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/inc/general_notice.html
+++ b/nautobot_plugin_device_lifecycle_mgmt/templates/nautobot_plugin_device_lifecycle_mgmt/inc/general_notice.html
@@ -1,5 +1,5 @@
 {% load helpers %}
-{% if perms.view and notices %}
+{% if perms.view and hw_notices %}
 {% for notice in hw_notices %}
 <div class="row">
     <div class="col-md-12">
