Add tags, custom fields and relationships to views, forms and API.

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_edit.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_edit.html
@@ -43,4 +43,5 @@
             {% endwith %}
         </div>
     </div>
+    {% include 'inc/extras_features_edit_form_fields.html' %}
 {% endblock %}
