--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_edit.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_edit.html
@@ -11,7 +11,7 @@
             {% render_field form.softwarelcm %}
             {% render_field form.start %}
             {% render_field form.end %}
-            {% render_field form.primary %}
+            {% render_field form.preferred %}
         </div>
     </div>
     <div class="panel panel-default">
