--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm_delete.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm_delete.html
@@ -1,8 +1,8 @@
 {% extends 'utilities/confirmation_form.html' %}
 {% load form_helpers %}
 
-{% block title %}Delete SoftwareLCM Object?{% endblock %}
+{% block title %}Delete Software Object?{% endblock %}
 
 {% block message %}
-    <p>Are you sure you want to delete SoftwareLCM Object <strong>{{ obj }}</strong>?</p>
+    <p>Are you sure you want to delete Software Object <strong>{{ obj }}</strong>?</p>
 {% endblock %}
