--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm.html
@@ -10,7 +10,7 @@
     <div class="row noprint">
         <div class="col-sm-8 col-md-9">
             <ol class="breadcrumb">
-                <li><a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:validatedsoftwarelcm_list' %}">ValidatedSoftwareLCM</a></li>
+                <li><a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:validatedsoftwarelcm_list' %}">ValidatedSoftware</a></li>
                 <li><a>{{ object }}</a></li>
             </ol>
         </div>
@@ -43,7 +43,7 @@
     </div>
     <ul class="nav nav-tabs">
         <li role="presentation"{% if not active_tab %} class="active"{% endif %}>
-            <a href="{{ object.get_absolute_url }}">ValidatedSoftwareLCM</a>
+            <a href="{{ object.get_absolute_url }}">ValidatedSoftware</a>
         </li>
         <li role="presentation"{% if active_tab == 'changelog' %} class="active"{% endif %}>
             <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:validatedsoftwarelcm_changelog' pk=object.id %}">Change Log</a>
@@ -56,11 +56,11 @@
     <div class="col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <strong>ValidatedSoftwareLCM</strong>
+                <strong>ValidatedSoftware</strong>
             </div>
             <table class="table table-hover panel-body attr-table">
                 <tr>
-                    <td>Software LCM</td>
+                    <td>Software Version</td>
                     <td>
                         {% if object.softwarelcm %}
                             <a href="{% url 'plugins:nautobot_plugin_device_lifecycle_mgmt:softwarelcm' pk=object.softwarelcm.pk %}">{{ object.softwarelcm }}</a>
@@ -88,9 +88,9 @@
                     <td>{{ object.end }}</td>
                 </tr>
                 <tr>
-                    <td>Primary Version</td>
+                    <td>Preferred Version</td>
                     <td>
-                    {% if object.primary is True %}
+                    {% if object.preferred is True %}
                         <span class="text-success"><i class="mdi mdi-check-bold"></i></span>
                     {% else %}
                         <span class="text-danger"><i class="mdi mdi-close"></i></span>
