--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_delete.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_delete.html
@@ -1,8 +1,8 @@
 {% extends 'utilities/confirmation_form.html' %}
 {% load form_helpers %}
 
-{% block title %}Delete ValidatedSoftwareLCM Object?{% endblock %}
+{% block title %}Delete ValidatedSoftware Object?{% endblock %}
 
 {% block message %}
-    <p>Are you sure you want to delete ValidatedSoftwareLCM Object <strong>{{ obj }}</strong>?</p>
+    <p>Are you sure you want to delete ValidatedSoftware Object <strong>{{ obj }}</strong>?</p>
 {% endblock %}
