--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_edit.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm_edit.html
@@ -8,7 +8,7 @@
     <div class="panel panel-default">
         <div class="panel-heading"><strong>Attributes</strong></div>
         <div class="panel-body">            
-            {% render_field form.softwarelcm %}
+            {% render_field form.software %}
             {% render_field form.start %}
             {% render_field form.end %}
             {% render_field form.preferred %}
