SoftwareLCM - remove end_of_security_patches field, add release_date field.

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm.html
@@ -74,12 +74,12 @@
                     <td>{{ object.version }}</td>
                 </tr>
                 <tr>
-                    <td>End of Support</td>
-                    <td>{{ object.end_of_support }}</td>
+                    <td>Release Date</td>
+                    <td>{{ object.release_date }}</td>
                 </tr>
                 <tr>
-                    <td>End of Security Patches</td>
-                    <td>{{ object.end_of_security_patches }}</td>
+                    <td>End of Support</td>
+                    <td>{{ object.end_of_support }}</td>
                 </tr>
                 <tr>
                     <td>Documentation URL</td>
