Initial checkin for Contracts and Providers
 Conflicts:
	nautobot_device_lifecycle_mgmt/api/serializers.py
	nautobot_device_lifecycle_mgmt/api/urls.py
	nautobot_device_lifecycle_mgmt/api/views.py
	nautobot_device_lifecycle_mgmt/filters.py
	nautobot_device_lifecycle_mgmt/forms.py
	nautobot_device_lifecycle_mgmt/migrations/0001_initial.py
	nautobot_device_lifecycle_mgmt/models.py
	nautobot_device_lifecycle_mgmt/navigation.py
	nautobot_device_lifecycle_mgmt/tables.py
	nautobot_device_lifecycle_mgmt/urls.py
	nautobot_device_lifecycle_mgmt/views.py

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarelcm.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/hardwarelcm.html
@@ -100,6 +100,8 @@
                 </tr>
             </table>
         </div>
+        {% include 'inc/custom_fields_panel.html' %}
+        {% include 'inc/relationships_panel.html' %}
     </div>
 </div>
 {% endblock %}
